# zq_auth_sdk_python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  runtests.py
.github/workflows/: publish.yml  test.yml
scripts/: 1_generate_changelog.py  2_bump_version_and_publish.py
tests/: conftest.py  test_session.py  test_utils.py
tests/client/: test_app.py  test_client.py
tests/fixtures/: .json  apps_9.json  auth_apps.json  auth_apps_expired.json  auth_apps_failed.json  auth_refresh.json  sso_union-id.json  sso_union-id_failed.json  users_123.json  users_123_no_detail.json  users_123_not_found.json
zq_auth_sdk/: __init__.py  exceptions.py  utils.py
zq_auth_sdk/client/: __init__.py  base.py
zq_auth_sdk/client/api/: __init__.py  app.py  base.py
zq_auth_sdk/entities/: response.py  types.py
zq_auth_sdk/storage/: __init__.py  memcachedstorage.py  memorystorage.py  redisstorage.py
